查询课表已经做完，并且都实时更新数据，但是教师头像存在问题。

--- a/app/src/main/res/layout/activity_regist_face.xml
+++ b/app/src/main/res/layout/activity_regist_face.xml
@@ -2,11 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="#ffffff">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="4"
+        android:weightSum="8"
         android:orientation="vertical"
         >
         <LinearLayout
@@ -19,7 +20,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_weight="4"
             android:orientation="horizontal"
             android:weightSum="4"
             >
@@ -55,8 +56,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="3"
             >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="请进行人脸识别注册\n将人脸放入到预览区内\n不要随意乱动"
+                android:textColor="#0fb2f0"
+                android:textSize="16dp"
+                android:gravity="center"
+                />
         </LinearLayout>
 
 
