--- a/app/src/main/res/layout/activity_student_change_info.xml
+++ b/app/src/main/res/layout/activity_student_change_info.xml
@@ -69,7 +69,7 @@
                     android:textSize="16dp"
                     android:layout_weight="1"
                     android:gravity="bottom"
-                    android:id="@+id/textView2"/>
+                    android:id="@+id/activity_student_change_info_schoolID"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -79,6 +79,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:textSize="15dp"
+                    android:id="@+id/activity_student_change_info_name"
                     />
             </LinearLayout>
 
