--- a/app/src/main/res/layout/fragment_student_checking.xml
+++ b/app/src/main/res/layout/fragment_student_checking.xml
@@ -37,6 +37,7 @@
                 android:textSize="@dimen/title_text_size"
                 android:textColor="#000000"
                 android:layout_marginRight="30dp"
+                android:id="@+id/fragment_student_checking_name"
                 />
         </RelativeLayout>
         <RelativeLayout
@@ -65,6 +66,7 @@
                 android:textSize="@dimen/title_text_size"
                 android:textColor="#000000"
                 android:layout_marginRight="30dp"
+                android:id="@+id/fragment_student_checking_day"
                 />
         </RelativeLayout>
         <RelativeLayout
@@ -93,6 +95,7 @@
                 android:textSize="@dimen/title_text_size"
                 android:textColor="#000000"
                 android:layout_marginRight="30dp"
+                android:id="@+id/fragment_student_checking_week"
                 />
         </RelativeLayout>
 
