--- a/app/src/main/res/layout/fragment_teacher_mine.xml
+++ b/app/src/main/res/layout/fragment_teacher_mine.xml
@@ -19,6 +19,7 @@
             app:civ_border_color="#FF000000"
             android:src="@drawable/icon_head"
             android:layout_margin="10dp"
+            android:id="@+id/fragment_teacher_mine_head_picture"
             />
 
         <LinearLayout
@@ -35,7 +36,7 @@
                 android:textSize="16dp"
                 android:layout_weight="1"
                 android:gravity="bottom"
-                />
+                android:id="@+id/fragment_teacher_mine_number"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -44,6 +45,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textSize="15dp"
+                android:id="@+id/fragment_teacher_mine_name"
                 />
         </LinearLayout>
 
